--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,11 @@
 			<version>3.5.3</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.2.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
